mwm initial pass

--- a/ICMLPhysicsWorkshop/dnns.bib
+++ b/ICMLPhysicsWorkshop/dnns.bib
@@ -1,5 +1,9 @@
-@MISC{weightwatcher_pagkage,
+@MISC{weightwatcher_package,
   title =        {{WeightWatcher}},
+  note =         {\texttt{https://pypi.org/project/WeightWatcher/}},
+}
+
+@MISC{weightwatcher_package_justURL,
   note =         {\texttt{https://pypi.org/project/WeightWatcher/}},
 }
 
@@ -412,6 +416,16 @@
    volume  = {113},
    number  = {48},
    pages   = {E7655--E7662},
+}
+
+@Article{energy_landscape_wales17,
+   author  = "A. J. Ballard and R. Das and S. Martiniani and D. Mehta and L. Sagun and J. D. Stevenson and D. J. Wales",
+   title   = "Energy landscapes for machine learning",
+   journal = "Physical Chemistry Chemical Physics",
+   year    = "2017",
+   volume  = "19",
+   issue   = "20",
+   pages   = "12585-12603",
 }
 
 @ARTICLE{BFMY12,
@@ -2947,6 +2961,13 @@
   year =      {2017},
 }
 
+@TECHREPORT{MM17_TR_v1,
+  author =    {C. H. Martin and M. W. Mahoney},
+  title =     {Rethinking generalization requires revisiting old ideas: statistical mechanics approaches and complex learning behavior},
+  number =    {Preprint: arXiv:1710.09553v1},
+  year =      {2017},
+}
+
 @TECHREPORT{MM18_TR,
   author =    {C. H. Martin and M. W. Mahoney},
   title =     {Implicit Self-Regularization in Deep Neural Networks: Evidence from Random Matrix Theory and Implications for Learning},
@@ -2963,14 +2984,23 @@
 @TECHREPORT{MM19_shortTR_of_longTR,
   author =    {C. H. Martin and M. W. Mahoney},
   title =     {Traditional and Heavy-Tailed Self Regularization in Neural Network Models},
-  number =    {Preprint: arXiv:},
+  number =    {Preprint: arXiv:1901.08276},
   year =      {2019},
+}
+
+@INPROCEEDINGS{MM19_HTSR_ICML,
+  author =       {C. H. Martin and M. W. Mahoney},
+  title =        {Traditional and Heavy-Tailed Self Regularization in Neural Network Models},
+  booktitle =    {Proceedings of the 36st International Conference on Machine Learning},
+  year =         {2019},
+  editor =       {},
+  pages =        {}, 
 }
 
 @TECHREPORT{MM19a_TR,
   author =    {C. H. Martin and M. W. Mahoney},
   title =     {Heavy-Tailed {U}niversality Predicts Trends in Test Accuracies for Very Large Pre-Trained Deep Neural Networks},
-  number =    {Preprint: arXiv:},
+  number =    {Preprint: arXiv:1901.08278},
   year =      {2019},
 }
 
@@ -3963,6 +3993,13 @@
    pages   = {2696--2711},
 }
 
+@TECHREPORT{SLAx18_TR,
+  author =       {C. J. Shallue and J. Lee and J. Antognini and J. Sohl-Dickstein and R. Frostig and G. E. Dahl}, 
+  title =        {Measuring the Effects of Data Parallelism on Neural Network Training},
+  note =         {Preprint: arXiv:1811.03600},
+  year =         {2018},
+}
+
 @INCOLLECTION{She14,
   author =       {D. Sherrington}, 
   title =        {Physics and Complexity: An Introduction},
@@ -4600,6 +4637,26 @@
   pages =        {1429--1451},
 }
 
+@ARTICLE{wolynes_proteins_95,
+  author =       {J. D. Bryngelson and J. N. Onuchic and N. D. Socci and P. G. Wolynes},
+  title =        {Funnels, pathways, and the energy landscape of protein folding: a synthesis},
+  journal =      {Proteins: Structure, Function, and Bioinformatics},
+  year =         {1995},
+  volume =       {21}
+  number =       {3},
+  pages =        {167--195},
+}
+
+@ARTICLE{wolynes_arpc_97,
+  author =       {J. N. Onuchic and Z. Luthey-Schulten and P. G. Wolynes},
+  title =        {Theory of protein folding: the energy landscape perspective},
+  journal =      {Annual review of physical chemistry},
+  year =         {1997},
+  volume =       {48},
+  number =       {1},
+  pages =        {545--600},
+}
+
 @INPROCEEDINGS{Won97,
   author =       {K. Y. M. Wong},
   title =        {Microscopic equations in rough energy landscape for neural networks},
@@ -4661,6 +4718,20 @@
   author =       {Z. Yao and A. Gholami and K. Keutzer and M. W. Mahoney},
   title =        {Large batch size training of neural networks with adversarial training and second-order information},
   note =         {Preprint: arXiv:1810.01021},
+  year =         {2018},
+}
+
+@TECHREPORT{GVYx18_TR,
+  author =       {N. Golmant and N. Vemuri and Z. Yao and V. Feinberg and A. Gholami and K. Rothauge and M. W. Mahoney and J. Gonzalez},
+  title =        {On the Computational Inefficiency of Large Batch Sizes for Stochastic Gradient Descent},
+  note =         {Preprint: arXiv:1811.12941},
+  year =         {2018},
+}
+
+@TECHREPORT{YGXKM18_TR,
+  author =       {Z. Yao and A. Gholami and P. Xu and K. Keutzer and M. W. Mahoney},
+  title =        {Trust Region Based Adversarial Attack on Neural Networks},
+  note =         {Preprint: arXiv:1812.06371},
   year =         {2018},
 }
 
